objects/UserTerritory__c.object
<CustomObject>
    <fields>
        <fullName>ActivityTerritory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InternalWholesaler__c</fullName>
        <description>Internal Wholesaler from the Territory object.</description>
        <formula>Territory__r.InternalWholesaler__r.FirstName &amp; " " &amp; Territory__r.InternalWholesaler__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Wholesaler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSTerritoryName_c__c</fullName>
        <description>Formula field to User Territories that uses the Territory lookup to display MARS Territory Name</description>
        <formula>Territory__r.TerritoryName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MARS Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerProfileName__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryTerritory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoleId__c</fullName>
        <formula>Territory__r.RoleId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TerrGroupId__c</fullName>
        <formula>Territory__r.GroupId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TerrGroupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryManager__c</fullName>
        <description>Territory Manager from the Territory object</description>
        <formula>Territory__r.TerritoryManager__r.FirstName &amp;" "&amp;  Territory__r.TerritoryManager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryName__c</fullName>
        <formula>Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryStatus__c</fullName>
        <description>Status of the territory record</description>
        <formula>TEXT(Territory__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryType__c</fullName>
        <formula>TEXT(Territory__r.TerritoryType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>User Territories</relationshipLabel>
        <relationshipName>User_Territories1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler1__c</fullName>
        <description>Wholesaler 1 from the Territory object</description>
        <formula>Territory__r.Wholesaler1__r.FirstName &amp; " " &amp; Territory__r.Wholesaler1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoning__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>User Territories</relationshipLabel>
        <relationshipName>User_Territories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>User Territory</label>
    <nameField>
        <displayFormat>UT-{00000000}</displayFormat>
        <label>User Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActivityTerritory__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>PrimaryTerritory__c</columns>
        <columns>OwnerProfileName__c</columns>
        <columns>User__c</columns>
        <columns>Territory__c</columns>
        <columns>Zoning__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>a02F000000DHHoGIAX</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blank_Zone</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>PrimaryTerritory__c</columns>
        <columns>Zoning__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zoning__c</field>
            <operation>equals</operation>
        </filters>
        <label>Blank Zone</label>
    </listViews>
    <listViews>
        <fullName>My_Territories</fullName>
        <columns>NAME</columns>
        <columns>PrimaryTerritory__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PrimaryTerritory__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Territories</label>
    </listViews>
    <validationRules>
        <fullName>Can_Not_Update_Record</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED( Territory__c ), ISCHANGED( Zoning__c ), ISCHANGED(  ActivityTerritory__c  ))</errorConditionFormula>
        <errorMessage>Can Not Update User Territory Record, Please Delete and Insert</errorMessage>
    </validationRules>
</CustomObject>